# winrs

./: .gitignore  Cargo.toml  README.md
src/: clipboard.rs  common.rs  console.rs  error.rs  lib.rs  main.rs
